--- a/testing-apikit-with-munit/pom.xml
+++ b/testing-apikit-with-munit/pom.xml
@@ -11,10 +11,6 @@
     <packaging>mule-application</packaging>
     <name>testing-apikit-with-munit</name>
 
-    <properties>
-        <mule.apikit.version>1.0.0</mule.apikit.version>
-        <munit.version>2.1.2</munit.version>
-    </properties>
 
     <build>
         <plugins>
@@ -49,6 +45,9 @@
                         </formats>
                     </coverage>
 				    <runtimeVersion>${app.runtime}</runtimeVersion>
+					<dynamicPorts>
+						<dynamicPort>http.port</dynamicPort>
+					</dynamicPorts>				    
                 </configuration>
             </plugin>
         </plugins>
