--- a/service-orchestration-and-choice-routing/pom.xml
+++ b/service-orchestration-and-choice-routing/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.mule.examples</groupId>
 		<artifactId>examples-catalog</artifactId>
-		<version>2.1.4</version>
+		<version>2.1.5-SNAPSHOT</version>
 	</parent>
 
 	<modelVersion>4.0.0</modelVersion>
@@ -12,13 +12,6 @@
     <version>2.1.0-SNAPSHOT</version>
     <packaging>mule-application</packaging>
 	<name>service-orchestration-and-choice-routing</name>
-
-    <properties>
-		<mysql.version>5.1.26</mysql.version>
-		<soapkit.connector.version>1.1.2</soapkit.connector.version>
-		<vm.connector.version>1.1.1</vm.connector.version>
-		<validation-module.version>1.2.2</validation-module.version>
-	</properties>
 
 	<build>
 		<plugins>
@@ -50,19 +43,19 @@
 		<dependency>
             <groupId>org.mule.modules</groupId>
             <artifactId>mule-soapkit-module</artifactId>
-            <version>${soapkit.connector.version}</version>
+            <version>${mule.soapapikit.version}</version>
             <classifier>mule-plugin</classifier>
         </dependency>
     	<dependency>
             <groupId>org.mule.connectors</groupId>
             <artifactId>mule-vm-connector</artifactId>
-            <version>${vm.connector.version}</version>
+            <version>${vm.module.version}</version>
             <classifier>mule-plugin</classifier>
         </dependency>
     	<dependency>
             <groupId>org.mule.modules</groupId>
             <artifactId>mule-validation-module</artifactId>
-            <version>${validation-module.version}</version>
+            <version>${validation.module.version}</version>
             <classifier>mule-plugin</classifier>
         </dependency>
     	<dependency>
