--- a/jms-message-rollback-and-redelivery/pom.xml
+++ b/jms-message-rollback-and-redelivery/pom.xml
@@ -42,7 +42,7 @@
 		<dependency>
 			<groupId>org.apache.activemq</groupId>
 			<artifactId>activemq-all</artifactId>
-			<version>5.10.0</version>
+			<version>${activemq.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.mule.modules</groupId>
