--- a/legacy-modernization/pom.xml
+++ b/legacy-modernization/pom.xml
@@ -28,21 +28,11 @@
         </plugins>
     </build>
 
-    <properties>
-        <soapkit.module.version>1.1.2</soapkit.module.version>
-    </properties>
-
     <dependencies>
         <dependency>
             <groupId>org.mule.connectors</groupId>
             <artifactId>mule-http-connector</artifactId>
             <version>${http.connector.version}</version>
-            <classifier>mule-plugin</classifier>
-        </dependency>
-        <dependency>
-            <groupId>org.mule.modules</groupId>
-            <artifactId>mule-soapkit-module</artifactId>
-            <version>${soapkit.module.version}</version>
             <classifier>mule-plugin</classifier>
         </dependency>
         <dependency>
@@ -55,6 +45,12 @@
             <groupId>org.mule.connectors</groupId>
             <artifactId>mule-file-connector</artifactId>
             <version>${file.connector.version}</version>
+            <classifier>mule-plugin</classifier>
+        </dependency>
+    		<dependency>
+            <groupId>org.mule.modules</groupId>
+            <artifactId>mule-soapkit-module</artifactId>
+            <version>${mule.soapapikit.version}</version>
             <classifier>mule-plugin</classifier>
         </dependency>
     </dependencies>
