--- a/sending-json-data-to-a-jms-queue/pom.xml
+++ b/sending-json-data-to-a-jms-queue/pom.xml
@@ -47,7 +47,7 @@
 		<dependency>
 			<groupId>org.apache.activemq</groupId>
 			<artifactId>activemq-all</artifactId>
-			<version>5.10.0</version>
+			<version>${activemq.version}</version>
 		</dependency>
 	</dependencies>
 	<repositories>
