Added dynamic ports

--- a/import-contacts-asynchronously/pom.xml
+++ b/import-contacts-asynchronously/pom.xml
@@ -10,7 +10,7 @@
     <artifactId>import-contacts-asynchronously</artifactId>
     <packaging>mule-application</packaging>
     <name>import-contacts-asynchronously</name>
-    
+
     <build>
         <plugins>
             <plugin>
@@ -44,6 +44,9 @@
                         </formats>
                     </coverage>
 				    <runtimeVersion>${app.runtime}</runtimeVersion>
+                  <dynamicPorts>
+                    <dynamicPort>http.port</dynamicPort>
+                  </dynamicPorts>
                 </configuration>
             </plugin>
         </plugins>
