--- a/cache-scope-with-salesforce-contacts/pom.xml
+++ b/cache-scope-with-salesforce-contacts/pom.xml
@@ -45,6 +45,9 @@
                         </formats>
                     </coverage>
                     <runtimeVersion>${app.runtime}</runtimeVersion>
+                    <dynamicPorts>
+                      <dynamicPort>http.port</dynamicPort>
+                    </dynamicPorts>
                 </configuration>
             </plugin>
         </plugins>
