--- a/exposing-a-restful-resource-using-the-HTTP-connector/pom.xml
+++ b/exposing-a-restful-resource-using-the-HTTP-connector/pom.xml
@@ -35,6 +35,9 @@
                         </formats>
                     </coverage>
 				    <runtimeVersion>${app.runtime}</runtimeVersion>
+                  <dynamicPorts>
+                    <dynamicPort>http.port</dynamicPort>
+                  </dynamicPorts>
                 </configuration>
             </plugin>
         </plugins>
