--- a/login-form-using-the-http-connector/pom.xml
+++ b/login-form-using-the-http-connector/pom.xml
@@ -50,6 +50,9 @@
                         </formats>
                     </coverage>
 				    <runtimeVersion>${app.runtime}</runtimeVersion>
+                  <dynamicPorts>
+                    <dynamicPort>http.port</dynamicPort>
+                  </dynamicPorts>
                 </configuration>
             </plugin>
         </plugins>
