--- a/processing-orders-with-dataweave-and-APIkit/pom.xml
+++ b/processing-orders-with-dataweave-and-APIkit/pom.xml
@@ -44,6 +44,9 @@
 						</formats>
 					</coverage>
 					<runtimeVersion>${app.runtime}</runtimeVersion>
+					<dynamicPorts>
+						<dynamicPort>http.port</dynamicPort>
+					</dynamicPorts>
 				</configuration>
 			</plugin>
 		</plugins>
