--- a/proxying-a-rest-api/pom.xml
+++ b/proxying-a-rest-api/pom.xml
@@ -50,6 +50,9 @@
                         </formats>
                     </coverage>
 				    <runtimeVersion>${app.runtime}</runtimeVersion>
+                  <dynamicPorts>
+                    <dynamicPort>http.port</dynamicPort>
+                  </dynamicPorts>
                 </configuration>
             </plugin>
         </plugins>
