--- a/salesforce-to-MySQL-DB-using-Batch-Processing/pom.xml
+++ b/salesforce-to-MySQL-DB-using-Batch-Processing/pom.xml
@@ -50,6 +50,9 @@
                         </formats>
                     </coverage>
 				    <runtimeVersion>${app.runtime}</runtimeVersion>
+                  <dynamicPorts>
+                    <dynamicPort>http.port</dynamicPort>
+                  </dynamicPorts>
                 </configuration>
             </plugin>
         </plugins>
