--- a/xml-only-soap-webservice/pom.xml
+++ b/xml-only-soap-webservice/pom.xml
@@ -59,7 +59,7 @@
             </plugin>
         </plugins>
     </build>
-    
+
     <dependencies>
         <dependency>
             <groupId>org.mule.connectors</groupId>
@@ -70,7 +70,7 @@
 		    <dependency>
             <groupId>org.mule.modules</groupId>
             <artifactId>mule-soapkit-module</artifactId>
-            <version>${soapkit.connector.version}</version>
+            <version>${mule.soapapikit.version}</version>
             <classifier>mule-plugin</classifier>
         </dependency>
         <dependency>
