--- a/pom.xml
+++ b/pom.xml
@@ -485,7 +485,7 @@
 		<snapshotRepository>
 			<id>mulesoft-snapshots</id>
 			<name>MuleSoft Snapshot Repository</name>
-			<url>http://repository-master.mulesoft.org/snapshots/</url>
+			<url>https://repository-master.mulesoft.org/snapshots/</url>
 			<uniqueVersion>false</uniqueVersion>
 		</snapshotRepository>
 	</distributionManagement>
