--- a/pom.xml
+++ b/pom.xml
@@ -431,70 +431,56 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-
-    <repositories>
+<repositories>
         <repository>
-            <id>mulesoft-releases</id>
-            <name>MuleSoft Releases Repository</name>
-            <url>https://repository.mulesoft.org/releases/</url>
-            <layout>default</layout>
-        </repository>
-        <repository>
-            <id>mulesoft-snapshots</id>
-            <name>MuleSoft Snapshots Repository</name>
-            <url>https://repository.mulesoft.org/snapshots/</url>
-            <layout>default</layout>
-        </repository>
-        <repository>
-            <id>mulesoft-public</id>
-            <name>MuleSoft Public Repository</name>
-            <url>https://repository.mulesoft.org/nexus/content/repositories/public/</url>
-            <layout>default</layout>
-        </repository>
-        <repository>
-            <id>jboss</id>
-            <name>JBoss</name>
-            <url>http://repository.jboss.com/</url>
-        </repository>
-	<repository>
            <id>anypoint-exchange</id>
            <name>Anypoint Exchange</name>
            <url>https://maven.anypoint.mulesoft.com/api/v1/maven</url>
            <layout>default</layout>
         </repository>
+        <repository>
+           <id>mulesoft-releases</id>
+           <name>MuleSoft Releases Repository</name>
+           <url>https://repository.mulesoft.org/releases/</url>
+           <layout>default</layout>
+        </repository>
+        <repository>
+           <id>mulesoft-snapshots</id>
+           <name>MuleSoft Snapshots Repository</name>
+           <url>https://repository.mulesoft.org/snapshots/</url>
+           <layout>default</layout>
+        </repository>
     </repositories>
-
     <pluginRepositories>
         <pluginRepository>
-            <id>mulesoft-releases</id>
-            <name>MuleSoft Releases Repository</name>
-            <url>https://repository.mulesoft.org/releases/</url>
-            <layout>default</layout>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
+           <id>mulesoft-releases</id>
+           <name>mulesoft release repository</name>
+           <layout>default</layout>
+           <url>http://repository.mulesoft.org/releases/</url>
+           <snapshots>
+               <enabled>false</enabled>
+           </snapshots>
         </pluginRepository>
         <pluginRepository>
-            <id>mulesoft-snapshots</id>
-            <name>MuleSoft Snapshots Repository</name>
-            <url>https://repository.mulesoft.org/snapshots/</url>
-            <layout>default</layout>
+           <id>mulesoft-snapshots</id>
+           <name>mulesoft snapshots repository</name>
+           <layout>default</layout>
+           <url>http://repository.mulesoft.org/snapshots/</url>
         </pluginRepository>
     </pluginRepositories>
-
     <distributionManagement>
-		<repository>
-			<id>mulesoft-releases</id>
-			<name>MuleSoft Repository</name>
-			<url>http://repository-master.mulesoft.org/releases/</url>
-		</repository>
-		<snapshotRepository>
-			<id>mulesoft-snapshots</id>
-			<name>MuleSoft Snapshot Repository</name>
-			<url>https://repository-master.mulesoft.org/snapshots/</url>
-			<uniqueVersion>false</uniqueVersion>
-		</snapshotRepository>
-	</distributionManagement>
+        <repository>
+           <id>anypoint-exchange</id>
+           <name>Anypoint Exchange</name>
+           <url>https://maven.anypoint.mulesoft.com/api/v1/maven</url>
+           <layout>default</layout>
+        </repository>
+        <snapshotRepository>
+           <id>mulesoft-snapshots</id>
+           <name>MuleSoft Snapshot Repository</name>
+           <url>https://repository-master.mulesoft.org/snapshots/</url>
+           <uniqueVersion>false</uniqueVersion>
+        </snapshotRepository>
 
     <scm>
         <connection>scm:git:https://github.com/mulesoft/anypoint-examples.git</connection>
