--- a/pom.xml
+++ b/pom.xml
@@ -61,7 +61,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         
-        <app.runtime>4.1.5</app.runtime>
+        <app.runtime>4.3.0-SNAPSHOT</app.runtime>
         <mule.maven.plugin.version>3.2.7</mule.maven.plugin.version>
         <munit.version>2.2.4</munit.version>
 
