--- a/retry-mechanism-example/pom.xml
+++ b/retry-mechanism-example/pom.xml
@@ -76,12 +76,14 @@
             <artifactId>munit-runner</artifactId>
             <version>${munit.version}</version>
             <classifier>mule-plugin</classifier>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>com.mulesoft.munit</groupId>
             <artifactId>munit-tools</artifactId>
             <version>${munit.version}</version>
             <classifier>mule-plugin</classifier>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
