--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
         <module>track-a-custom-business-event</module>
         <module>salesforce-data-synchronization-using-watermarking-and-batch-processing</module>
         <module>hello-world</module>
+        <module>dataweave-with-flowreflookup</module>
         <!-- proxying-a-soap-api is currently unavaliable due to issue with external Tshirt service -->
         <!-- <module>proxying-a-soap-api</module -->
         <module>adding-a-new-customer-to-workday-revenue-management</module>
