--- a/pom.xml
+++ b/pom.xml
@@ -61,39 +61,39 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         
-        <app.runtime>4.3.0-SNAPSHOT</app.runtime>
+        <app.runtime>4.3.0</app.runtime>
         <mule.maven.plugin.version>3.3.5</mule.maven.plugin.version>
         <munit.version>2.2.5</munit.version>
 
         <mule.apikit.version>1.3.12</mule.apikit.version>
-        <mule.soapapikit.version>1.2.2</mule.soapapikit.version>
-        <db.connector.version>1.5.4</db.connector.version>
-        <email.connector.version>1.1.6</email.connector.version>
-        <file.connector.version>1.2.4</file.connector.version>
-        <ftp.connector.version>1.3.1</ftp.connector.version>
-        <http.connector.version>1.5.4</http.connector.version>
-        <java.module.version>1.2.4</java.module.version>
-        <jms.connector.version>1.6.0</jms.connector.version>
-        <netsuite.connector.version>9.2.5</netsuite.connector.version>
-        <oauth.module.version>1.1.8</oauth.module.version>
-        <objectstore.connector.version>1.1.3</objectstore.connector.version>
-        <sfdc.connector.version>9.7.9</sfdc.connector.version>
-        <scripting.module.version>1.1.6</scripting.module.version>
-        <servicenow.connector.version>6.2.2</servicenow.connector.version>
-        <sftp.connector.version>1.2.5</sftp.connector.version>
-        <sap.connector.version>4.3.1</sap.connector.version>
-        <sockets.connector.version>1.1.5</sockets.connector.version>
-        <spring.module.version>1.3.0</spring.module.version>
+        <mule.soapapikit.version>1.2.7</mule.soapapikit.version>
+        <db.connector.version>1.8.1</db.connector.version>
+        <email.connector.version>1.2.1</email.connector.version>
+        <file.connector.version>1.3.2</file.connector.version>
+        <ftp.connector.version>1.5.1</ftp.connector.version>
+        <http.connector.version>1.5.9</http.connector.version>
+        <java.module.version>1.2.6</java.module.version>
+        <jms.connector.version>1.7.0</jms.connector.version>
+        <netsuite.connector.version>9.3.0</netsuite.connector.version>
+        <oauth.module.version>1.1.12</oauth.module.version>
+        <objectstore.connector.version>1.1.5</objectstore.connector.version>
+        <sfdc.connector.version>9.9.1</sfdc.connector.version>
+        <scripting.module.version>2.0.0</scripting.module.version>
+        <!-- <servicenow.connector.version>6.6.0</servicenow.connector.version> -->
+        <!-- <sftp.connector.version>1.3.7</sftp.connector.version> -->
+        <sap.connector.version>5.1.6</sap.connector.version>
+        <sockets.connector.version>1.2.0</sockets.connector.version>
+        <!-- <spring.module.version>1.3.3</spring.module.version> -->
         <validation.module.version>1.4.0</validation.module.version>
         <vm.module.version>2.0.0</vm.module.version>
-        <wsc.connector.version>1.3.3</wsc.connector.version>
-        <workday.connector.version>10.0.1</workday.connector.version>
-        <mongodb.connector.version>5.3.1</mongodb.connector.version>
-        <mule.ldap.connector.version>3.1.4</mule.ldap.connector.version>
-        <ms-dynamics.connector.version>3.1.4</ms-dynamics.connector.version>
-        <amqp.connector.version>1.4.3</amqp.connector.version>
-        <mysql.version>5.1.26</mysql.version>
-        <activemq.version>5.10.0</activemq.version>
+        <wsc.connector.version>1.5.8</wsc.connector.version>
+        <workday.connector.version>12.0.2</workday.connector.version>
+        <mongodb.connector.version>6.1.1</mongodb.connector.version>
+        <mule.ldap.connector.version>3.2.2</mule.ldap.connector.version>
+        <ms-dynamics.connector.version>3.2.3</ms-dynamics.connector.version>
+        <amqp.connector.version>1.6.2</amqp.connector.version>
+        <mysql.version>5.1.49</mysql.version>
+        <activemq.version>5.15.11</activemq.version>
     </properties>
     <build>
         <plugins>
@@ -156,21 +156,21 @@
     </build>
     <repositories>
         <repository>
-           <id>anypoint-exchange</id>
-           <name>Anypoint Exchange</name>
-           <url>https://maven.anypoint.mulesoft.com/api/v1/maven</url>
-           <layout>default</layout>
-        </repository>
-        <repository>
            <id>mulesoft-releases</id>
            <name>MuleSoft Releases Repository</name>
            <url>https://repository.mulesoft.org/releases/</url>
            <layout>default</layout>
         </repository>
         <repository>
-           <id>mulesoft-snapshots</id>
-           <name>MuleSoft Snapshots Repository</name>
-           <url>https://repository.mulesoft.org/snapshots/</url>
+           <id>mulesoft-ee-releases</id>
+           <name>MuleSoft Releases Repository</name>
+           <url>https://repository-master.mulesoft.org/nexus/</url>
+           <layout>default</layout>
+        </repository>
+        <repository>
+           <id>anypoint-exchange</id>
+           <name>Anypoint Exchange</name>
+           <url>https://maven.anypoint.mulesoft.com/api/v2/organizations/68ef9520-24e9-4cf2-b2f5-620025690913/maven</url>
            <layout>default</layout>
         </repository>
     </repositories>
@@ -183,6 +183,12 @@
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
+        </pluginRepository>
+        <pluginRepository>
+           <id>mulesoft-ee-releases</id>
+           <name>MuleSoft Releases Repository</name>
+           <url>https://repository.mulesoft.org/nexus/content/repositories/releases-ee/</url>
+           <layout>default</layout>
         </pluginRepository>
         <pluginRepository>
            <id>mulesoft-snapshots</id>
