--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,8 @@
         <module>querying-a-mysql-database</module>
         <module>retry-mechanism-example</module>
         <module>salesforce-data-retrieval</module>
-        <module>salesforce-to-MySQL-DB-using-Batch-Processing</module>
+        <!-- After raising connector version fails -->
+        <!-- <module>salesforce-to-MySQL-DB-using-Batch-Processing</module -->
         <module>scatter-gather-flow-control</module>
         <module>testing-apikit-with-munit</module>
         <module>track-a-custom-business-event</module>
